# cpp-opengl

./: .gitignore  CMakeLists.txt  README.md  dev.sh
res/: fs.glsl  vs.glsl
src/: main.cpp
src/cppmc/: camera.cpp  camera.hpp  cube_mesh.cpp  cube_mesh.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture_atlas.cpp  texture_atlas.hpp  util.cpp  util.hpp  world.cpp  world.hpp  world_common.cpp  world_common.hpp
